# reflect_sdk

./: CMakeLists.txt  README.md
src/: common_includes.hh  globals.cc  globals.hh  main.cc
src/events/: events.cc  events.hh
src/events/callbacks/: player_hurt.cc
src/features/: features.hh
src/features/misc/: movement.cc  movement.hh  prediction.cc  prediction.hh
src/features/visuals/: chams.cc  chams.hh
src/hooks/: hooks.cc  hooks.hh
src/hooks/vtables/: client.cc  client_mode.cc  model_render.cc  sdl.cc  surface.cc
src/menu/: menu.cc  menu.hh
src/sdk/: definitions.hh  entity.cc  entity.hh  interfaces.cc  interfaces.hh  sdk.cc  sdk.hh  structs.hh
src/sdk/datatypes/: c_base_handle.hh  c_cvar.hh  c_utl_vector.hh  client_class.hh  i_material.hh  i_material_var.hh  i_trace_filter.hh  key_values.hh  recv_prop.hh
src/sdk/interfaces/: i_base_client.hh  i_client_entity_list.hh  i_client_mode.hh  i_client_state.hh  i_cs_player_resource.hh  i_cvar_system.hh  i_engine_client.hh  i_engine_sound.hh  i_engine_trace.hh  i_game_event_manager.hh  i_game_movement.hh  i_game_rules.hh  i_game_types.hh  i_input.hh  i_localize.hh  i_material_system.hh  i_model_info.hh  i_model_render.hh  i_move_helper.hh  i_prediction.hh  i_render_view.hh  i_studio_render.hh  i_surface.hh
src/sdk/other/: i_client_entity.hh  i_collideable.hh
src/utils/: utils.hh
src/utils/config/: config.cc  config.hh
src/utils/hooking/: vmt.hh
src/utils/imgui/: imgui.cc  imgui.hh  imgui_draw.cc  imgui_internal.hh  imgui_tables.cc  imgui_widgets.cc
src/utils/imgui/backend/: imgui_impl_opengl3.cc  imgui_impl_opengl3.hh  imgui_impl_sdl.cc  imgui_impl_sdl.hh
src/utils/input/: input.cc  input.hh
src/utils/math/: datatypes.cc  datatypes.hh  math.cc  math.hh
src/utils/memory/: memory.cc  memory.hh
src/utils/netvars/: data_map.hh  netvars.cc  netvars.hh
src/utils/obfuscation/: fnv1a.hh  xor.hh
src/utils/render/: render.cc  render.hh
